--- a/Inlinecss.html
+++ b/Inlinecss.html
@@ -3,11 +3,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>External CSS </title>
-    <link href="Externalcss_stylesheet.css" rel="stylesheet"/>
+    <title>Inline CSS</title>
+      <link href="Externalcss_stylesheet.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1 class="commonFont">Title of website</h1>
+<h1 class="commonFont">Title of website</h1>
     <p id="para1">
         This is my sample text in paragraph 1
     </p>
@@ -17,6 +17,9 @@
     <div class="commonFont">
         This is my sample text in div 1
     </div>
-</body>
+    <div style="background-color:brown;color:aqua;">
+        This is my sample text in div 3
+    </div>
 
+</body>
 </html>
