--- a/Internalcss.html
+++ b/Internalcss.html
@@ -3,11 +3,18 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>External CSS </title>
+    <title>Internal css</title>
     <link href="Externalcss_stylesheet.css" rel="stylesheet"/>
+    <style>
+        #d1{
+            background-color:aqua;
+            color:blue;
+        }
+    </style>
+
 </head>
 <body>
-    <h1 class="commonFont">Title of website</h1>
+<h1 class="commonFont">Title of website</h1>
     <p id="para1">
         This is my sample text in paragraph 1
     </p>
@@ -17,6 +24,9 @@
     <div class="commonFont">
         This is my sample text in div 1
     </div>
-</body>
+     <div id="d1">
+        This is my sample text in div 2
+    </div>
 
+</body>
 </html>
